--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://arcane77.github.io/NAV-Dashboard",
+  "homepage": "https://arcane77.github.io/NAV-dashboard",
   "name": "nav-dashboard",
   "version": "0.1.0",
   "private": true,
